RESOLVED FIXED135442
DOM::renderedImageForcingBlackText returns an image with the wrong logical size on 2x displays
https://bugs.webkit.org/show_bug.cgi?id=135442
Summary DOM::renderedImageForcingBlackText returns an image with the wrong logical si...
Tim Horton
Reported 2014-07-30 17:16:54 PDT
DOM::renderedImageForcingBlackText returns an NSImage with logical size == physical size on 2x displays, causing clients to display said images at the wrong size. <rdar://problem/17614632>
Attachments
patch (1.87 KB, patch)
2014-07-31 14:49 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2014-07-31 14:49:54 PDT
Tim Horton
Comment 2 2014-07-31 15:06:46 PDT
Tim Horton
Comment 3 2014-08-01 11:20:01 PDT
Note You need to log in before you can comment on or make changes to this bug.