DOM::renderedImageForcingBlackText returns an image with the wrong logical size on 2x displays https://bugs.webkit.org/show_bug.cgi?id=135442 <rdar://problem/17614632>

Reviewed by Simon Fraser.

* bindings/objc/DOM.mm:
(-[DOMRange renderedImageForcingBlackText:renderedImageForcingBlackText:]):
Scale the NSImage size by the device scale factor,
similar to what we did for drag images in r167403.
Ideally this scaling would happen in the code that
generates the images, but this is a much larger change
with much more regression potential.


Canonical link: https://commits.webkit.org/153355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171889 268f45cc-cd09-0410-ab3c-d52691b4dbfc